--- a/public/chat.html
+++ b/public/chat.html
@@ -1,45 +1,107 @@
-<!-- chat.html -->
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <title>צ'אט גנאולוגי</title>
+  <meta charset="UTF-8">
+  <title>צ'אט גנאולוגי חכם</title>
   <style>
-    body { font-family: sans-serif; background: #f4f8fb; padding: 20px; }
-    #chatbox { max-width: 600px; margin: auto; background: white; padding: 20px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    .message { margin: 10px 0; }
-    .user { text-align: right; color: blue; }
-    .bot { text-align: left; color: green; }
+    body {
+      font-family: sans-serif;
+      background: #f0f4f8;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+    }
+    header {
+      background-color: #0057a3;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+      font-size: 1.5rem;
+    }
+    main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 1rem;
+    }
+    #chat-box {
+      flex: 1;
+      overflow-y: auto;
+      background: white;
+      padding: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      margin-bottom: 1rem;
+    }
+    .msg {
+      margin: 0.5rem 0;
+    }
+    .msg.user {
+      text-align: right;
+      color: #0057a3;
+    }
+    .msg.ai {
+      text-align: left;
+      color: #333;
+    }
+    form {
+      display: flex;
+      gap: 0.5rem;
+    }
+    input[type="text"] {
+      flex: 1;
+      padding: 0.7rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    button {
+      padding: 0.7rem 1rem;
+      background: #0057a3;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <div id="chatbox">
-    <h2>צ'אט גנאולוגי</h2>
-    <div id="messages"></div>
-    <form onsubmit="sendMessage(event)">
-      <input type="text" id="input" placeholder="שאל שאלה על המשפחה..." style="width:80%" required />
+  <header>🧠 צ'אט גנאולוגי</header>
+  <main>
+    <div id="chat-box"></div>
+    <form id="chat-form">
+      <input type="text" id="user-input" placeholder="שאל שאלה על עץ המשפחה..." required />
       <button type="submit">שלח</button>
     </form>
-  </div>
+  </main>
   <script>
-    async function sendMessage(e) {
-      e.preventDefault();
-      const input = document.getElementById("input");
-      const msg = input.value;
-      input.value = "";
+    const form = document.getElementById("chat-form");
+    const input = document.getElementById("user-input");
+    const chatBox = document.getElementById("chat-box");
 
-      const messagesDiv = document.getElementById("messages");
-      messagesDiv.innerHTML += `<div class="message user">${msg}</div>`;
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const question = input.value.trim();
+      if (!question) return;
+
+      chatBox.innerHTML += `<div class="msg user">${question}</div>`;
+      input.value = "";
+      chatBox.scrollTop = chatBox.scrollHeight;
 
       const res = await fetch("/api/ask", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ question: msg })
+        body: JSON.stringify({ question })
       });
-      const data = await res.json();
 
-      messagesDiv.innerHTML += `<div class="message bot">${data.answer}</div>`;
-    }
+      const data = await res.json();
+      chatBox.innerHTML += `<div class="msg ai">${data.answer}</div>`;
+      chatBox.scrollTop = chatBox.scrollHeight;
+    });
   </script>
 </body>
 </html>
+
