--- a/public/migration-map.html
+++ b/public/migration-map.html
@@ -1,43 +1,41 @@
+<!-- public/migration-map.html -->
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>מפת נדודי המשפחה</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.css"/>
+  <meta charset="UTF-8" />
+  <title>מפת נדודים משפחתית</title>
+  <script src="https://cdn.jsdelivr.net/npm/leaflet/dist/leaflet.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet/dist/leaflet.css"/>
   <style>
-    #map { height: 600px; }
+    body, html { margin: 0; padding: 0; height: 100%; }
+    #map { height: 100vh; }
   </style>
 </head>
 <body>
-  <main>
-    <h2>מפת נדודי המשפחה</h2>
-    <div id="map"></div>
-  </main>
-
+  <div id="map"></div>
   <script>
-    const map = L.map('map').setView([31.7683, 35.2137], 5);
+    const map = L.map('map').setView([31.7683, 35.2137], 2); // Israel center
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors'
+      attribution: '© OpenStreetMap contributors'
     }).addTo(map);
 
-    // דוגמה לנקודות נדידה
     const migrations = [
-      { from: "מרוקו", lat: 31.7917, lon: -7.0926 },
-      { to: "ישראל", lat: 31.7683, lon: 35.2137 }
+      { name: "מרוקו", lat: 31.7917, lon: -7.0926 },
+      { name: "צרפת", lat: 46.6034, lon: 1.8883 },
+      { name: "ישראל", lat: 31.7683, lon: 35.2137 },
+      { name: "פולין", lat: 51.9194, lon: 19.1451 },
+      { name: "הולנד", lat: 52.1326, lon: 5.2913 }
     ];
 
-    migrations.forEach((m, i) => {
-      L.marker([m.lat, m.lon]).addTo(map)
-        .bindPopup(m.from ? `מ־${m.from}` : `אל ${m.to}`);
-    });
-
-    if (migrations.length === 2) {
-      L.polyline([[migrations[0].lat, migrations[0].lon], [migrations[1].lat, migrations[1].lon]], {
-        color: 'blue'
-      }).addTo(map);
+    for (let i = 0; i < migrations.length; i++) {
+      const m = migrations[i];
+      L.marker([m.lat, m.lon]).addTo(map).bindPopup(m.name);
+      if (i > 0) {
+        const prev = migrations[i - 1];
+        L.polyline([[prev.lat, prev.lon], [m.lat, m.lon]], { color: "blue" }).addTo(map);
+      }
     }
   </script>
 </body>
 </html>
+
