--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
        <a href="/calendar.html"> <span>📆</span> לוח שנה</a>
       <a href="/forum.html"> <span>👪</span> פורום משפחתי</a>
         <a href="/biographies.html"><span>📖</span> ביוגרפיות</a>
-        <li><a href="/statistics.html"><span>📊</span> סטטיסטיקות</a>
+        <li><a href="/family-stats.html"><span>📊</span> סטטיסטיקות</a>
        <a href="/update-request.html">עדכון פרטים</a>
         <a href="/upload-photo.html">העלאת תמונות</a>
         <a href="/upload-video.html">העלאת סרטון</a>
