--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
+  <input type="text" id="search" placeholder="חפש לפי נושא או שולח..." oninput="filterMessages()" style="width: 100%; padding: 0.5rem; margin-bottom: 1rem;" />
   <meta charset="UTF-8" />
   <title>📩 תיבת ההודעות</title>
   <link rel="stylesheet" href="mailbox.css" />
